--- a/views/routes/friends.html
+++ b/views/routes/friends.html
@@ -2,14 +2,7 @@
 <body>
 	<div>
 		FRIENDS
-		
-		<label id="nav-map">map</label>			
-	</div>	
-
-	<script>
-        $('#nav-map').singleTap(function(){
-		 	HTM.navTo('map');
-		});    
-    </script>
+		Friend of friend.	
+	</div>
 </body>
 </html>
