--- a/views/routes/map.html
+++ b/views/routes/map.html
@@ -2,18 +2,7 @@
 <body>
 	<div>
 		MAP
-		
-		<label id="nav-friends">friends</label>
-		<label id="nav-events">events</label>
-	</div>	
-
-	<script>
-        $('#nav-friends').singleTap(function(){
-		 	HTM.navTo('friends');
-		});
-		$('#nav-events').singleTap(function(){
-		 	HTM.navTo('events');
-		});  
-    </script>
+		Map of friends and evetns.
+	</div>
 </body>
 </html>
